2006-03-24 Mark Grondona <mgrondona@llnl.gov>

	* config/x_ac_libsysfs.m4 : Check for libsysfs 2.0.

	* configure, config.h.in : re-run ./bootstrap.

2006-03-21 Mark Grondona <mgrondona@llnl.gov>

	* edac.spec : Fix permissions in specfile.

	* src/lib/libedac.c : Quiet warnings when reading from EDAC sysfs
	  files. In some EDAC implementations, this might just mean that
	  the channel corresponding to the file does not exist.

	* src/util/edac-ctl : Use syswrite instead of print to write
	  to the dimm_labels files in /sys. Avoids hang in EDAC 
	  implementations that return 0 for writes to these files.

	* : tag version 0.3.

2006-03-16 Mark Grondona <mgrondona@llnl.gov>

	* : tag version 0.2.
	
2006-03-14 Mark Grondona <mgrondona@llnl.gov>

	* : Initial commit.

	* : tag version 0.1.

	* src/util/edac-ctl : Fix typo preventing --register-labels from
	  doing anything.

	* src/util/edac-util.c : Generate error if a report is requested
	  but no memory controller data is found in sysfs.